stories/Components/Buttons/CtaButton/cta-button.scss
// .mg-buttons {
//   margin-bottom: 1em;
//   //Media queries

//   @media (max-width: $mg-breakpoint-mobile) {
//     display: flex;
//     flex-direction: column;
//   }

//   @media (max-width: $mg-breakpoint-tablet) {
//     display: flex;
//     flex-direction: column;
//   }
// }

.mg-button {
  align-items: center;
  background: transparent;
  display: flex;
  font-size: $mg-font-size-button;
  font-weight: 600;
  line-height: 1;
  border-radius: $mg-radius-button;
  color: $mg-color-button;
  cursor: pointer;
  justify-content: center;
  padding: $mg-padding-button;
  border: $mg-border-width-button solid $mg-border-color-button;

  &:focus-visible {
    box-shadow: 0 0 4px $mg-color-button-background--hover;
    outline: 0;
  }

  @include devicebreak(medium) {
    display: inline-flex;
  }
}

.mg-button + .mg-button {
  margin-left: mg-rem(10);
}

button {
  &:focus-visible {
    box-shadow: 0 0 4px $mg-color-button-background;
    outline: 0;
  }
}

.mg-button-primary {
  background-color: $mg-color-button-background;

  &:hover {
    color: $mg-color-button;
    background-color: $mg-color-button-background--hover;
  }
}

.mg-button-secondary {
  background-color: $mg-color-button-secondary-background;

  &:hover {
    color: $mg-color-button;
    background-color: $mg-color-button-secondary-background--hover;
  }
}

.mg-button.disabled {
  background-color: $mg-color-neutral-400;
  color: $mg-color-neutral-300;
  pointer-events: none;
}

// [dir='rtl'] {
//   .button {
//     &.button-primary {
//       &.button-arrow {
//         &::after {
//           @include transform(rotate(180deg));

//           margin-left: 0;
//           margin-right: $mg-spacing-25;
//         }

//         &:hover::after {
//           @include transform(translate(-50%, 0) rotate(180deg));
//         }
//       }
//     }
//   }
// }

// Arabic font override
:lang(ar) {
  .mg-button {
    font-family: $mg-font-family-arabic-headings;
  }
}

